# R-Type

./: CMakeLists.txt  LICENCE  README.md  rfcNumber.txt  vcpkg.json
doc/: r-type_doxygen.conf  rfc.txt
doc/html/: annotated.html  classes.html  dir_000000_000005.html  dir_000002_000005.html  dir_000002_000006.html  dir_000003_000005.html  dir_000004_000000.html  dir_000004_000005.html  dir_000005_000001.html  dir_000005_000004.html  dir_000006_000004.html  dir_000007_000005.html  dir_000007_000011.html  dir_000008_000005.html  dir_000010_000011.html  dir_000011_000005.html  dir_000011_000009.html  dir_00900c5b9e32d5a4a54bc13388d4a809.html  dir_00900c5b9e32d5a4a54bc13388d4a809_dep.map  dir_00900c5b9e32d5a4a54bc13388d4a809_dep.md5  dir_073402b06d831bb0ea44664935cf1ebd.html  dir_073402b06d831bb0ea44664935cf1ebd_dep.map  dir_085e11b0814fd5b462a5301060c23090.html  dir_085e11b0814fd5b462a5301060c23090_dep.map  dir_085e11b0814fd5b462a5301060c23090_dep.md5  dir_0c0333544ec44c57ec7d33d873fe36a2.html  dir_0c0333544ec44c57ec7d33d873fe36a2_dep.map  dir_0c0333544ec44c57ec7d33d873fe36a2_dep.md5  dir_1404a4f1f9940739cf150cc9e02d5c4e.html  dir_1404a4f1f9940739cf150cc9e02d5c4e_dep.map  dir_47fa91028f218d6f54fad3438d26879a.html  dir_47fa91028f218d6f54fad3438d26879a_dep.map  dir_4e4e2e75df7fa6971448b424c011c8b5.html  dir_4e4e2e75df7fa6971448b424c011c8b5_dep.map  dir_4e4e2e75df7fa6971448b424c011c8b5_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4_dep.map  dir_63772b626f2709090f0bdca0f40827b4_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+99 more)
doc/html/d0/d1c/: Main_8cpp__incl.map
doc/html/d0/d49/: Entity_8hpp__dep__incl.map
doc/html/d0/d86/: namespaceRender.html
doc/html/d0/d8c/: namespaceProgram.html
doc/html/d0/d95/: classECS_1_1Core-members.html
doc/html/d0/db0/: structcomponent_1_1Velocity-members.html
doc/html/d0/dec/: GUI_8cpp__incl.map  GUI_8cpp__incl.md5
doc/html/d0/dff/: Sprite_8cpp.html
doc/html/d1/d11/: structcomponent_1_1HitBox-members.html
doc/html/d1/d15/: PhysicsModule_8hpp__incl.map  PhysicsModule_8hpp__incl.md5
doc/html/d1/d3d/: structcomponent_1_1Controllable-members.html
doc/html/d1/d56/: Core_8hpp__dep__incl.map
doc/html/d1/d68/: classentity-members.html
doc/html/d1/d6f/: GUI_8hpp.html  GUI_8hpp_source.html
doc/html/d1/d97/: ControlModule_8cpp.html
doc/html/d1/d98/: structcomponent_1_1Drawable-members.html
doc/html/d1/da6/: SparseArray_8cpp__incl.map
doc/html/d1/dcf/: GUI_8hpp__dep__incl.map
doc/html/d1/dd1/: DestroyOutOfBoundsModule_8cpp__incl.map  DestroyOutOfBoundsModule_8cpp__incl.md5
doc/html/d1/dd3/: classGUI_1_1Sprite-members.html
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_2.js  defines_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+60 more)
doc/latex/: annotated.tex  dir_00900c5b9e32d5a4a54bc13388d4a809.tex  dir_073402b06d831bb0ea44664935cf1ebd.tex  dir_073402b06d831bb0ea44664935cf1ebd_dep.md5  dir_085e11b0814fd5b462a5301060c23090.tex  dir_0c0333544ec44c57ec7d33d873fe36a2.tex  dir_1404a4f1f9940739cf150cc9e02d5c4e.tex  dir_1404a4f1f9940739cf150cc9e02d5c4e_dep.md5  dir_47fa91028f218d6f54fad3438d26879a.tex  dir_47fa91028f218d6f54fad3438d26879a_dep.md5  dir_4e4e2e75df7fa6971448b424c011c8b5.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7a0f3de698247c2b155e56e57851969c.tex  dir_8213943ce0b792be39d34390845932ae.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  dir_a2f0e5642e47e7ed59fe0f0829eafb5f.tex  dir_abba63c40add30cbebf7823a42f3ac85.tex  dir_abba63c40add30cbebf7823a42f3ac85_dep.md5  dir_b1a122bf62c958266ec5bf64d14fde5a.tex  dir_bde645946ce0d36c764143568c0cd542.tex  dir_be9243ea0451cb7b4349af58d070258e.tex  dir_ced41267a7fac2b39105bfc2f627e391.tex  dir_ced41267a7fac2b39105bfc2f627e391_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_d4cc5fd6ea99923831e020566be833d9.tex  dir_d4cc5fd6ea99923831e020566be833d9_dep.md5  dir_d5a3b748c56ceddcfc1d7c75de9a5c71.tex  dir_d5a3b748c56ceddcfc1d7c75de9a5c71_dep.md5  dir_dc438da9d827b68764d7588e31a4b843.tex  dir_dc438da9d827b68764d7588e31a4b843_dep.md5  dir_f6141aeee34381ef9218d18cc59afdbf.tex  dir_f938830485ea5fc932d9051b851477f4.tex  dir_fa4c1ef45327e46e4481b7924f0be9ee.tex  dir_fa4c1ef45327e46e4481b7924f0be9ee_dep.md5  files.tex  hierarchy.tex  (+2 more)
include/: Core.hpp  ECS.hpp  GUI.hpp  Network.hpp  Program.hpp  Sound.hpp
include/Core/: Component.hpp  Entity.hpp  Registry.hpp  SparseArray.hpp
include/ECS/: Component.hpp  Registry.hpp  SystemHandler.hpp
include/GUI/: Sprite.hpp
lib/Collision/: CMakeLists.txt  CollisionModule.cpp  CollisionModule.hpp
lib/Control/: CMakeLists.txt  ControlModule.cpp  ControlModule.hpp
lib/DestroyOutOfBounds/: CMakeLists.txt  DestroyOutOfBoundsModule.cpp  DestroyOutOfBoundsModule.hpp
lib/Physics/: CMakeLists.txt  PhysicsModule.cpp  PhysicsModule.hpp
lib/Render/: CMakeLists.txt  RenderModule.cpp  RenderModule.hpp
old/: Connector.cpp  Network.hpp  test.cpp
old/Network/: Client.cpp  Server.cpp
server/: CMakeLists.txt
server/include/: ECS.hpp  GUI.hpp  NetworkServer.hpp  Program.hpp
server/include/ECS/: Component.hpp  Entity.hpp  SystemHandler.hpp
server/src/: Main.cpp
server/src/ECS/: ECS.cpp  Registry.cpp  SparseArray.cpp  SystemHandler.cpp
server/src/Network/: NetworkServer.cpp
src/: Main.cpp
src/Core/: Core.cpp  Registry.cpp  SparseArray.cpp  SystemHandler.cpp
src/ECS/: ECS.cpp  Registry.cpp  SystemHandler.cpp
src/GUI/: GUI.cpp  Sprite.cpp
src/Network/: Client.cpp  Server.cpp
src/Sound/: Music.cpp
(+331 files in other folders)
